--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -4,6 +4,10 @@ TODO:
 * do we want to add a self_url to the JSON response from DRS objects?  This would make it much, much easier to construct the access method rather than using the hostname-based URI which requires manipulation and parsing.
 * mention "The key words MUST, MUST NOT, REQUIRED, SHALL, SHALL NOT, SHOULD, SHOULD NOT, RECOMMENDED, MAY, and OPTIONAL in this document are to be interpreted as described in RFC 2119." https://tools.ietf.org/html/rfc2119
 * I should mention in the sections in the appendix that the identifiers.org API calls are subject to change, there are n2t.net equivalents, and systems that use these are always welcome to directly mirror the registries themselves as well
+* comments from David to note in the PR conversation
+  - removing provider_code
+	- mandating all DRS servers to register new prefixes
+	- saying 'drs.' should be in the prefixes
 ////
 
 == Introduction
@@ -25,9 +29,9 @@ Each implementation of DRS can choose its own id scheme, as long as it follows t
 
 === DRS URIs
 
-For convenience, including when passing content references to a https://github.com/ga4gh/workflow-execution-service-schemas[WES server], we define a https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme] for DRS-accessible content. See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1]. _We feel it is important to introduce a DRS scheme for URIs since it signals to systems consuming these URIs that the response they will ultimately receive, once transforming the URI to a fetchable URL, will be a DRS JSON._
+For convenience, including when passing content references to a https://github.com/ga4gh/workflow-execution-service-schemas[WES server], we define a https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme] for DRS-accessible content. This section documents the syntax of DRS URIs, and the rules clients follow for translating a DRS URI into a URL that they use for making the DRS API calls described in this spec.
 
-There are two styles of DRS URIs: Hostname-based and Compact Identifier-based, both use the `drs://` URI scheme.  Different systems may choose to share one or both styles of DRS URIs but DRS clients must support resolving both types.
+There are two styles of DRS URIs, Hostname-based and Compact Identifier-based, both using the `drs://` URI scheme. DRS servers may choose either style when exposing references to their content;. DRS clients MUST support resolving both styles.
 
 ==== Hostname-based DRS URIs
 
@@ -35,28 +39,33 @@ Hostname-based DRS URIs are simpler than compact identifier-based URIs.  They co
 
     drs://<hostname>/<id>
 
-And this can be converted into the following fetchable URL:
+DRS URIs of this form mean “you can fetch the content with DRS id <id> from the DRS server at <hostname> ".
+For example, here are the client resolution steps if the URI is:
+drs://drs.example.org/314159
 
-    https://<hostname>/ga4gh/drs/v1/objects/<id>
+1) The client parses the string to extract the hostname of “drs.example.org” and the id of “314159”.
+2) The client makes a GET request to the DRS server, using the standard DRS URL syntax:
 
-The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a different port in the DRS hostname-based URI.
+    GET https://drs.example.org/ga4gh/drs/v1/objects/314159
 
-TIP: Much more information is provided in the <<_appendix_hostname_based_uris>> including details on how to resolve hostname-based DRS URIs and how they compare to compact identifier-based DRS URIs. It also includes information on how hostname-based DRS URI resolution to URLs will work in the future, when the DRS v2 major release happens.
+The protocol is always https and the port is always the standard 443 SSL port. It is invalid to include a different port in a DRS hostname-based URI.
+
+TIP: See the <<_appendix_hostname_based_uris>> for information on how hostname-based DRS URI resolution to URLs is likely to change in the future, when the DRS v2 major release happens.
 
 ==== Compact Identifier-based DRS URIs
 
-Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent introduction to this topic.  We support the use of compact identifiers in DRS URIs since many resources in the research community issue these identifiers in a variety of formats.  We leverage the resolver registry services of https://identifiers.org/[identifiers.org] or https://n2t.net/[n2t.net (Name-To-Thing)] to support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc), allowing for the resolution of DRS objects without needing to use a hostname in the URI.
-
-.Note: DRS Service Implementations Prefix Registration
-****
-If your DRS implementation will issue IDs based on compact identifiers, and will pass around DRS URIs using these compact identifiers, you *must* register your prefix (which consists of `[provider_code/]namespace`) on identifiers.org/n2t.net. If you don't, DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a valid DRS URL that clients can access.
-****
-
-Translating the identifiers.org/n2t.net CURIE format to a DRS compact identifier-based URI we get the following form. Together, provider code and the namespace are referred to as the _prefix_. The provider code is optional and is used by identifiers.org/n2t.net for compact identifier resolver mirrors:
+Compact Identifier-based DRS URIs use meta-resolver services (specifically, https://identifiers.org/[identifiers.org] and https://n2t.net/[n2t.net (Name-To-Thing)]) to provide a layer of indirection between the DRS URI and the DRS server name -- the actual DNS name of the DRS server isn’t present in the URI. (See the <<_appendix_compact_identifier_based_uris>> for more background on Compact Identifiers and meta-resolver services.) They take the form:
 
     drs://[provider_code/]namespace:accession
 
+Together, provider code and the namespace are referred to as the _prefix_. The provider code is optional and is used by identifiers.org/n2t.net for compact identifier resolver mirrors
+
 TIP: Much more information is provided in the <<_appendix_compact_identifier_based_uris>> including details on the structure of compact identifiers, how to register prefixes, how clients resolve compact identifier-based DRS URIs, possible caching strategies, and security considerations.
+
+
+=== For DRS Servers
+
+If your DRS implementation will issue IDs based on compact identifiers, and will pass around DRS URIs using these compact identifiers, you *must* register your prefix (which consists of `[provider_code/]namespace`) on identifiers.org/n2t.net. If you don't, DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a valid DRS URL that clients can access.
 
 
 ==== Choosing a URI Style
